--- a/views/layouts/home.ejs
+++ b/views/layouts/home.ejs
@@ -25,7 +25,7 @@
         
         <!-- Include Footer Section -->
         <%- include("../sections/footer.ejs") %>
-        
+        <!-- This is a change in home.ejs file -->
         
     </div>
     
