home.ejs changed

--- a/views/layouts/home.ejs
+++ b/views/layouts/home.ejs
@@ -26,6 +26,7 @@
         <!-- Include Footer Section -->
         <%- include("../sections/footer.ejs") %>
         <!-- This is a change in home.ejs file -->
+        <!-- This is a change number 2 in home.ejs file -->
         
     </div>
     
