--- a/views/sections/2-hero.ejs
+++ b/views/sections/2-hero.ejs
@@ -4,13 +4,13 @@
     <div class="flex flex-col">
         <div class="text-center">
             <h1 data-aos="fade-down" data-aos-once="true"
-                class="text-4xl md:text-6xl lg:text-7xl dark:text-black text-white font-bold">Entrepreneurship Cell
+                class="text-3xl md:text-6xl lg:text-7xl dark:text-black text-white font-bold">Entrepreneurship Cell
             </h1>
             <p data-aos="zoom-in" data-aos-once="true"
-                class="md:text-2xl text-xl dark:text-black text-white font-semibold mt-5">Guru Nanak Dev, Engineering
+                class="md:text-2xl text-md dark:text-black text-white font-semibold mt-5">Guru Nanak Dev, Engineering
                 College</p>
             <span
-                class="md:text-xl text-lg dark:text-black text-white">Ludhiana</span>
+                class="md:text-xl text-sm dark:text-black text-white">Ludhiana</span>
         </div>
         <div data-aos="zoom-out" data-aos-once="true" class="text-center my-5">
             <div class="inline-block mr-2 mt-2">
