--- a/views/sections/4-departments.ejs
+++ b/views/sections/4-departments.ejs
@@ -1,7 +1,7 @@
 <!-- Department Starts -->
 <div id="department" class="bg-gray-100 dark:bg-gray-900 dark:text-white pb-10">
     <h1 data-aos="zoom-in" data-aos-once="true"
-        class="mb-7 pt-16 text-5xl font-bold text-center bg-gradient-to-r from-red-500 via-blue-600 to-green-100 text-transparent bg-clip-text">
+        class="mb-7 pt-16 text-3xl md:text-5xl font-bold text-center bg-gradient-to-r from-red-500 via-blue-600 to-green-100 text-transparent bg-clip-text">
         Departments
     </h1>
     <div id="dept_div">
