--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -174,7 +174,7 @@ hero {
         url("/img/event2.jpg");
 }
 .content-div-3 {
-    background-image: url("/img/event3.jpg"); 
+    background-image: url("/img/event3.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -201,5 +201,48 @@ hero {
 }
 
 html {
-  scroll-behavior: smooth;
+    scroll-behavior: smooth;
+}
+
+// Modal
+.animated {
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+}
+
+.animated.faster {
+    -webkit-animation-duration: 500ms;
+    animation-duration: 500ms;
+}
+
+.fadeIn {
+    -webkit-animation-name: fadeIn;
+    animation-name: fadeIn;
+}
+
+.fadeOut {
+    -webkit-animation-name: fadeOut;
+    animation-name: fadeOut;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeOut {
+    from {
+        opacity: 1;
+    }
+
+    to {
+        opacity: 0;
+    }
 }
