--- a/views/layouts/partials/head.ejs
+++ b/views/layouts/partials/head.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>TailWind Practice</title>
+    <title>E-Cell | GNDEC</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
