Navbar fixed in all resolutions

--- a/views/sections/1-navbar.ejs
+++ b/views/sections/1-navbar.ejs
@@ -1,6 +1,6 @@
 <!-- Start of the navbar -->
 <div
-    class="z-50 w-full text-gray-700 bg-indigo-900 sm:fixed">
+    class="z-50 w-full text-gray-700 bg-indigo-900 fixed">
     <div x-data="{ open: false }"
         class="flex flex-col px-3 mx-auto md:items-center md:flex-row md:px-6 lg:px-8">
         <div class="p-3 flex flex-row items-center justify-between">
