Event and dept create bug resolved, Added a newsletter section, event and dept are of carousel flow

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -141,7 +141,7 @@ hero {
 }
 
 .social a:hover {
-    background: -webkit-linear-gradient(var(--primary), var(--pure));
+    background: var(--light);
     color: var(--dark);
 }
 
