--- a/views/layouts/home.ejs
+++ b/views/layouts/home.ejs
@@ -20,8 +20,11 @@
         <!-- Include Events Section -->
         <%- include("../sections/5-events.ejs") %>
         
+        <!-- Include Newsletter Section -->
+        <%- include("../sections/6-newsletter.ejs") %>
+
         <!-- Include Contact Form Section -->
-        <%- include("../sections/6-contact.ejs") %>
+        <%- include("../sections/7-contact.ejs") %>
         
         <!-- Include Footer Section -->
         <%- include("../sections/footer.ejs") %> 
