--- a/views/sections/2-hero.ejs
+++ b/views/sections/2-hero.ejs
@@ -1,10 +1,10 @@
 <!-- Start of the hero section -->
 <div id="hero"
-    class="md:h-screen pt-52 top-0 left-0 right-0 pb-32 bg-gradient-to-r from-green-300 via-blue-500 to-purple-600">
+    class="lg:h-screen pt-52 top-0 left-0 right-0 pb-32 bg-gradient-to-r from-green-300 via-blue-500 to-purple-600">
 
     <div class="flex flex-col">
         <div class="text-center">
-            <h1 class="text-3xl md:text-6xl lg:text-7xl dark:text-black text-white font-bold">Entrepreneurship Cell
+            <h1 class="text-4xl md:text-6xl lg:text-7xl dark:text-black text-white font-bold">Entrepreneurship <br>Cell
             </h1>
             <p class="md:text-2xl text-md dark:text-black text-white font-semibold mt-5">Guru Nanak Dev, Engineering
                 College</p>
