Carousel navs fixed

--- a/views/layouts/partials/scripts.ejs
+++ b/views/layouts/partials/scripts.ejs
@@ -18,8 +18,9 @@
     $(".owl-carousel").owlCarousel({
         loop: false,
         margin: 10,
-        nav: false,
+        nav: true,
         autoplay: false,
+        navText : ["<i class='fa fa-chevron-left'></i>","<i class='fa fa-chevron-right'></i>"],
         responsive: {
             0: {
                 items: 1,
@@ -33,5 +34,7 @@
         },
     });
 </script>
+
+
 
 <!--Scripts Ends -->
