--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -204,45 +204,13 @@ html {
     scroll-behavior: smooth;
 }
 
-// Modal
-.animated {
-    -webkit-animation-duration: 1s;
-    animation-duration: 1s;
-    -webkit-animation-fill-mode: both;
-    animation-fill-mode: both;
+// Owl Carousel
+.owl-next:focus,
+.owl-prev:focus {
+    outline: none;
 }
 
-.animated.faster {
-    -webkit-animation-duration: 500ms;
-    animation-duration: 500ms;
-}
-
-.fadeIn {
-    -webkit-animation-name: fadeIn;
-    animation-name: fadeIn;
-}
-
-.fadeOut {
-    -webkit-animation-name: fadeOut;
-    animation-name: fadeOut;
-}
-
-@keyframes fadeIn {
-    from {
-        opacity: 0;
-    }
-
-    to {
-        opacity: 1;
-    }
-}
-
-@keyframes fadeOut {
-    from {
-        opacity: 1;
-    }
-
-    to {
-        opacity: 0;
-    }
+.owl-next,
+.owl-prev {
+    width: 10%;
 }
