--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -216,9 +216,13 @@ html {
 }
 
 #hero {
-    background-image: url("https://images.pexels.com/photos/2045600/pexels-photo-2045600.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
+    background-image: url("https://images.pexels.com/photos/1631677/pexels-photo-1631677.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
     background-attachment: fixed;
-    background-position: left;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    /* backdrop-filter: blur(9px);
+    filter: blur(9px); */
 }
 
 ::selection {
