--- a/views/sections/2-hero.ejs
+++ b/views/sections/2-hero.ejs
@@ -1,10 +1,12 @@
 <!-- Start of the hero section -->
-<div id="hero"
-    class="lg:h-screen w-full pt-52 top-0 left-0 right-0 pb-32">
+<div id="hero" class="lg:h-screen w-full pt-52 top-0 left-0 right-0 pb-32">
 
-    <div  class="flex flex-col">
+    <div class="flex flex-col">
         <div class="text-center">
-            <h1 amp-fx="parallax" data-parallax-factor="1.7" class="text-4xl md:text-6xl lg:text-7xl dark:text-black text-white font-bold">Entrepreneurship <br>Cell
+            <p class="md:text-2xl text-md dark:text-black text-white font-semibold">Innovate | Work Hard | Grow</p>
+            <h1 amp-fx="parallax" data-parallax-factor="1.7"
+                class="text-4xl md:text-6xl lg:text-7xl dark:text-black text-white font-bold">Entrepreneurship
+                <br>Cell
             </h1>
             <p class="md:text-2xl text-md dark:text-black text-white font-semibold mt-5">Guru Nanak Dev, Engineering
                 College</p>
