AJAX call for newsletter

--- a/views/sections/7-contact.ejs
+++ b/views/sections/7-contact.ejs
@@ -204,8 +204,8 @@
                                     Submit
                                 </button>
                                 <div>
-                                    <div id="contact-conf-good" class="hidden">
-                                        <div class="flex text-green-700 mt-3">
+                                    <div id="contact-conf" class="hidden">
+                                        <div class="flex mt-3">
                                             <svg id="Layer_1" class="my-1 mx-2"
                                                 enable-background="new 0 0 512.063 512.063" height="20"
                                                 viewBox="0 0 512.063 512.063" width="20"
@@ -226,88 +226,6 @@
                                                         fill="#dfebf1" />
                                                 </g>
                                             </svg>
-                                            Message sent successfully! We will get back to you ASAP :)
-                                        </div>
-                                    </div>
-                                    <div id="contact-conf-bad" class="hidden">
-                                        <div class="flex text-red-700 mt-3">
-                                            <svg id="Layer_1" class="my-1 mx-2"
-                                                enable-background="new 0 0 512.292 512.292" height="20"
-                                                viewBox="0 0 512.292 512.292" width="20"
-                                                xmlns="http://www.w3.org/2000/svg">
-                                                <g>
-                                                    <g>
-                                                        <g>
-                                                            <ellipse cx="256.146" cy="256.146" fill="#ff0031"
-                                                                rx="256.064" ry="256.146" />
-                                                        </g>
-                                                        <path
-                                                            d="m256.404 0v512.286c141.301-.14 255.806-114.764 255.806-256.143s-114.505-256.003-255.806-256.143z"
-                                                            fill="#ae2538" />
-                                                    </g>
-                                                    <path
-                                                        d="m372.338 182.874-43.712-43.712c-2.148-2.148-5.631-2.148-7.779 0l-61.172 61.172c-2.148 2.148-5.631 2.148-7.779 0l-61.172-61.172c-2.148-2.148-5.631-2.148-7.779 0l-43.712 43.712c-2.148 2.148-2.148 5.631 0 7.779l61.172 61.172c2.148 2.148 2.148 5.631 0 7.779l-61.172 61.172c-2.148 2.148-2.148 5.631 0 7.779l43.712 43.712c2.148 2.148 5.631 2.148 7.779 0l61.172-61.172c2.148-2.148 5.631-2.148 7.779 0l61.172 61.172c2.148 2.148 5.631 2.148 7.779 0l43.712-43.712c2.148-2.148 2.148-5.631 0-7.779l-61.172-61.172c-2.148-2.148-2.148-5.631 0-7.779l61.172-61.172c2.148-2.148 2.148-5.63 0-7.779z"
-                                                        fill="#fff5f5" />
-                                                    <path
-                                                        d="m372.338 190.654c2.148-2.148 2.148-5.631 0-7.779l-43.712-43.712c-2.148-2.148-5.631-2.148-7.779 0l-61.172 61.172c-1.008 1.008-2.312 1.525-3.632 1.586v107.589c1.32.062 2.624.578 3.632 1.586l61.172 61.172c2.148 2.148 5.631 2.148 7.779 0l43.712-43.712c2.148-2.148 2.148-5.631 0-7.779l-61.172-61.172c-2.148-2.148-2.148-5.631 0-7.779z"
-                                                        fill="#dfebf1" />
-                                                </g>
-                                            </svg>
-                                            Please fill all the required fields.
-                                        </div>
-                                    </div>
-                                    <div id="contact-conf-email" class="hidden">
-                                        <div class="flex text-red-700 mt-3">
-                                            <svg id="Layer_1" class="my-1 mx-2"
-                                                enable-background="new 0 0 512.292 512.292" height="20"
-                                                viewBox="0 0 512.292 512.292" width="20"
-                                                xmlns="http://www.w3.org/2000/svg">
-                                                <g>
-                                                    <g>
-                                                        <g>
-                                                            <ellipse cx="256.146" cy="256.146" fill="#ff0031"
-                                                                rx="256.064" ry="256.146" />
-                                                        </g>
-                                                        <path
-                                                            d="m256.404 0v512.286c141.301-.14 255.806-114.764 255.806-256.143s-114.505-256.003-255.806-256.143z"
-                                                            fill="#ae2538" />
-                                                    </g>
-                                                    <path
-                                                        d="m372.338 182.874-43.712-43.712c-2.148-2.148-5.631-2.148-7.779 0l-61.172 61.172c-2.148 2.148-5.631 2.148-7.779 0l-61.172-61.172c-2.148-2.148-5.631-2.148-7.779 0l-43.712 43.712c-2.148 2.148-2.148 5.631 0 7.779l61.172 61.172c2.148 2.148 2.148 5.631 0 7.779l-61.172 61.172c-2.148 2.148-2.148 5.631 0 7.779l43.712 43.712c2.148 2.148 5.631 2.148 7.779 0l61.172-61.172c2.148-2.148 5.631-2.148 7.779 0l61.172 61.172c2.148 2.148 5.631 2.148 7.779 0l43.712-43.712c2.148-2.148 2.148-5.631 0-7.779l-61.172-61.172c-2.148-2.148-2.148-5.631 0-7.779l61.172-61.172c2.148-2.148 2.148-5.63 0-7.779z"
-                                                        fill="#fff5f5" />
-                                                    <path
-                                                        d="m372.338 190.654c2.148-2.148 2.148-5.631 0-7.779l-43.712-43.712c-2.148-2.148-5.631-2.148-7.779 0l-61.172 61.172c-1.008 1.008-2.312 1.525-3.632 1.586v107.589c1.32.062 2.624.578 3.632 1.586l61.172 61.172c2.148 2.148 5.631 2.148 7.779 0l43.712-43.712c2.148-2.148 2.148-5.631 0-7.779l-61.172-61.172c-2.148-2.148-2.148-5.631 0-7.779z"
-                                                        fill="#dfebf1" />
-                                                </g>
-                                            </svg>
-                                            Invalid E-Mail Address
-                                        </div>
-                                    </div>
-                                    <div id="contact-conf-server" class="hidden">
-                                        <div class="flex text-red-700 mt-3">
-                                            <svg id="Layer_1" class="my-1 mx-2"
-                                                enable-background="new 0 0 512.292 512.292" height="20"
-                                                viewBox="0 0 512.292 512.292" width="20"
-                                                xmlns="http://www.w3.org/2000/svg">
-                                                <g>
-                                                    <g>
-                                                        <g>
-                                                            <ellipse cx="256.146" cy="256.146" fill="#ff0031"
-                                                                rx="256.064" ry="256.146" />
-                                                        </g>
-                                                        <path
-                                                            d="m256.404 0v512.286c141.301-.14 255.806-114.764 255.806-256.143s-114.505-256.003-255.806-256.143z"
-                                                            fill="#ae2538" />
-                                                    </g>
-                                                    <path
-                                                        d="m372.338 182.874-43.712-43.712c-2.148-2.148-5.631-2.148-7.779 0l-61.172 61.172c-2.148 2.148-5.631 2.148-7.779 0l-61.172-61.172c-2.148-2.148-5.631-2.148-7.779 0l-43.712 43.712c-2.148 2.148-2.148 5.631 0 7.779l61.172 61.172c2.148 2.148 2.148 5.631 0 7.779l-61.172 61.172c-2.148 2.148-2.148 5.631 0 7.779l43.712 43.712c2.148 2.148 5.631 2.148 7.779 0l61.172-61.172c2.148-2.148 5.631-2.148 7.779 0l61.172 61.172c2.148 2.148 5.631 2.148 7.779 0l43.712-43.712c2.148-2.148 2.148-5.631 0-7.779l-61.172-61.172c-2.148-2.148-2.148-5.631 0-7.779l61.172-61.172c2.148-2.148 2.148-5.63 0-7.779z"
-                                                        fill="#fff5f5" />
-                                                    <path
-                                                        d="m372.338 190.654c2.148-2.148 2.148-5.631 0-7.779l-43.712-43.712c-2.148-2.148-5.631-2.148-7.779 0l-61.172 61.172c-1.008 1.008-2.312 1.525-3.632 1.586v107.589c1.32.062 2.624.578 3.632 1.586l61.172 61.172c2.148 2.148 5.631 2.148 7.779 0l43.712-43.712c2.148-2.148 2.148-5.631 0-7.779l-61.172-61.172c-2.148-2.148-2.148-5.631 0-7.779z"
-                                                        fill="#dfebf1" />
-                                                    </g>
-                                                </svg>
-                                            An error occured! Please try again later.
                                         </div>
                                     </div>
                                 </div>
