--- a/views/sections/6-newsletter.ejs
+++ b/views/sections/6-newsletter.ejs
@@ -6,9 +6,9 @@
             </div>
             <div
                 class="flex items-center mx-auto justify-center xl:w-1/3 lg:w-1/3 md:w-1/3 lg:mx-auto w-10/12 border-b border-gray-400 z-10">
-                <input type="text" placeholder="Enter Your Email"
+                <input type="text" id="newsletter-input" placeholder="Enter Your Email"
                     class="bg-transparent focus:outline-none text-white w-11/12 pb-4" id="email" aria-label="email" />
-                <a class="pb-3" href="#">
+                <button id="newsletter-button" class="pb-3" href="#">
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-narrow-right"
                         width="30" height="30" viewBox="0 0 24 24" stroke-width="1.5" stroke="#CBD5E0" fill="none"
                         stroke-linecap="round" stroke-linejoin="round">
@@ -17,7 +17,7 @@
                         <line x1="15" y1="16" x2="19" y2="12" />
                         <line x1="15" y1="8" x2="19" y2="12" />
                     </svg>
-                </a>
+                </button>
             </div>
         </div>
     </div>
