Event page and department page

--- a/views/layouts/partials/links.ejs
+++ b/views/layouts/partials/links.ejs
@@ -28,6 +28,35 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 <!-- AMP Parallax -->
-<script async custom-element="amp-fx-collection" src="https://cdn.ampproject.org/v0/amp-fx-collection-0.1.js"></script> 
+<script async custom-element="amp-fx-collection" src="https://cdn.ampproject.org/v0/amp-fx-collection-0.1.js"></script>
 
+<style>
+    /* Owl Carousel */
+    .owl-theme .owl-next :hover {
+        text-decoration: none;
+    }
+
+    .owl-theme .owl-nav [class*='owl-']:hover {
+        background: transparent;
+        text-decoration: none;
+        outline: none;
+    }
+
+    .owl-theme .owl-nav [class*='owl-']:focus {
+        background: transparent;
+        text-decoration: none;
+        outline: none;
+    }
+
+    .owl-theme .owl-dots .owl-dot span {
+        background-color: rgba(79, 70, 229);    
+    }
+
+    .owl-next,
+    .owl-prev {
+        width: 10%;
+        outline: none;
+        color: indigo;
+    }
+</style>
 </head>
