--- a/views/layouts/home.ejs
+++ b/views/layouts/home.ejs
@@ -32,6 +32,7 @@
     </div>
     
     <%- include("./partials/scripts.ejs") %>
+    <%- include("./partials/toggle-script.ejs") %>
 </body >
 
 </html >
