--- a/views/sections/6-newsletter.ejs
+++ b/views/sections/6-newsletter.ejs
@@ -1,11 +1,11 @@
-<div class="">
+<div id="newsletter">
     <div class="w-full bg-blue-900 py-24  overflow-hidden">
         <div class="container mx-auto z-10">
             <div class="flex justify-center">
-                <h1 class="xl:text-4xl mx-auto lg:text-4xl inline-block xl:text-left text-white font-bold pb-8">Subscribe to our monthly NewsLetter!</h1>
+                <h1 class="xl:text-4xl mx-auto lg:text-4xl inline-block text-center text-white font-bold pb-8">Subscribe to our monthly Magazine!</h1>
             </div>
             <div
-                class="flex items-center mx-auto justify-center xl:w-1/3 lg:w-1/3 md:w-1/3 lg:mx-auto w-10/12 border-b border-gray-400 z-10">
+                class="flex items-center mx-auto xl:w-1/3 lg:w-1/3 md:w-1/3 lg:mx-auto w-10/12 border-b border-gray-400 z-10">
                 <input type="text" id="newsletter-input" placeholder="Enter Your Email"
                     class="bg-transparent focus:outline-none text-white w-11/12 pb-4" id="email" aria-label="email" />
                 <button id="newsletter-button" class="pb-3" href="#">
