Contact form button loader added, department page improved, footer changed

--- a/views/layouts/home.ejs
+++ b/views/layouts/home.ejs
@@ -1,7 +1,7 @@
 <%- include("./partials/head.ejs") %> 
 <%- include("./partials/links.ejs") %> 
 
-<body class="dark">
+<body class="dark font-mont">
     
     <div class="dark:bg-gray-900 dark:text-white">
         
