--- a/views/sections/footer.ejs
+++ b/views/sections/footer.ejs
@@ -1,27 +1,71 @@
-<div class="bg-black">
-    <footer class="flex flex-wrap items-center justify-between p-3 m-auto">
-        <div class="container mx-auto flex flex-col flex-wrap items-center justify-between">
-            <ul class="flex mx-auto text-white text-center">
-                <div class="my-2 lg:mt-3">
-                    <div class="text-center mb-4">
-                        <span class="text-4xl text-blue-300 ">Follow Us</span>
+<footer id="footer" class="bg-gray-800 py-10 md:py-5">
+    <div class="px-10">
+        <div class="flex flex-wrap">
+            <div class="w-full sm:w-1/2 md:w-1/2 lg:w-1/4 py-5 flex justify-center items-center wow fadeInUp" data-wow-delay="0.2s">
+                <div class="mx-3 mb-8">
+                    <div class="footer-logo mb-3 flex justify-center">
+                        <img class="rounded-full w-28 h-28" src="/img/logo-footer.jpg" alt="">
                     </div>
-                    <div class="social justify-center">
-                        <a href="#" class="fab fa-facebook-f"></a>
-                        <a href="#" class="fab fa-linkedin-in"></a>
-                        <a href="#" class="fab fa-instagram"></a>
-                        <a href="#" class="far fa-envelope"></a>
-                        <a href="#" class="fab fa-twitter"></a>
-                    </div>
+                    <p class="text-gray-300 text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam
+                        excepturi quasi, ipsam
+                        voluptatem.</p>
                 </div>
-            </ul>
-            <div class="flex mx-auto text-white text-center">
-                <p>
-                    E-Cell © 2021.
-                    <br>
-                    Developed with &#10084;&#65039; By <a href="#" class="hover:underline">E-Cell Technical Team</a>
+            </div>
+            <div class="border-t-2 md:border-none  border-gray-700 border-dotted w-full sm:w-1/2 md:w-1/2 lg:w-1/4 wow py-5  fadeInUp" data-wow-delay="0.4s">
+                <div class="mx-3 mb-8">
+                    <h3 class="font-bold text-xl text-white mb-5">E-Cell</h3>
+                    <ul class="text-gray-200 ">
+                        <li><a href="#" class="footer-links duration-300 hover:text-indigo-600">Blog</a></li>
+                        <li><a href="#" class="footer-links duration-300 hover:text-indigo-600">Mission</a></li>
+                        <li><a href="#" class="footer-links duration-300 hover:text-indigo-600">Monthly Magazine</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="w-full sm:w-1/2 md:w-1/2 lg:w-1/4 wow py-5  fadeInUp" data-wow-delay="0.4s">
+                <div class="mx-3 mb-8">
+                    <h3 class="font-bold text-xl text-white mb-5">Events</h3>
+                    <ul class="text-gray-200 ">
+                        <li><a href="#" class="footer-links duration-300 hover:text-indigo-600">Live</a></li>
+                        <li><a href="#" class="footer-links duration-300 hover:text-indigo-600">Competitions</a></li>
+                        <li><a href="#" class="footer-links duration-300 hover:text-indigo-600">Archived</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="w-full sm:w-1/2 md:w-1/2 lg:w-1/4 wow py-5  fadeInUp" data-wow-delay="0.4s">
+                <div class="mx-3 mb-8">
+                    <h3 class="font-bold text-xl text-white mb-5">About</h3>
+                    <ul class="text-gray-200 ">
+                        <li><a href="#" class="footer-links duration-300 hover:text-indigo-600">Career</a></li>
+                        <li><a href="#" class="footer-links duration-300 hover:text-indigo-600">Team</a></li>
+                        <li><a href="#" class="footer-links duration-300 hover:text-indigo-600">Portfolio</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
+
+<section class="bg-gray-800 py-3 border-t-2 flex flex-col border-gray-700 border-dotted">
+    <div class="w-full wow py-2 flex justify-center items-center fadeInUp" data-wow-delay="0.8s">
+        <div class="mx-3 mb-2">
+            <h3 class="font-bold text-xl text-white text-center mb-5">Find us on</h3>
+            <div class="social justify-start">
+                <a href="#" class="fab fa-facebook-f"></a>
+                <a href="#" class="fab fa-linkedin-in"></a>
+                <a href="#" class="fab fa-instagram"></a>
+                <a href="#" class="far fa-envelope"></a>
+                <a href="#" class="fab fa-twitter"></a>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="flex flex-wrap">
+            <div class="w-full px-1 text-center">
+                <p class="text-white">Developed with
+                    <i class="fas fa-heart"></i> By <a class="text-white duration-300 hover:text-indigo-600" href="#"
+                        rel="nofollow">Technical Team, E-Cell</a>
                 </p>
             </div>
         </div>
-    </footer>
-</div>
+    </div>
+</section>
