--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -31,9 +31,6 @@
     font-weight: 600;
 }
 
-body {
-    height: 2000px;
-}
 .gradient-border:hover {
     background: transparent;
     color: black;
@@ -347,4 +344,75 @@ header h1 {
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     text-align: center;
+}
+
+.team-item {
+    margin: 0.75rem;
+    text-align: center;
+    --bg-opacity: 1;
+    background-color: #fff;
+    background-color: rgba(255, 255, 255, var(--bg-opacity));
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+    transition-duration: 300ms;
+}
+
+.team-item:hover {
+    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+        0 4px 6px -2px rgba(0, 0, 0, 0.05);
+}
+
+.team-overlay {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    --bg-opacity: 1;
+    background-color: #edf2f7;
+    background-color: rgba(237, 242, 247, var(--bg-opacity));
+    transition-duration: 300ms;
+    opacity: 0;
+}
+
+.team-overlay:hover {
+    opacity: 1;
+}
+
+.social-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 2.5rem;
+    height: 2.5rem;
+    --bg-opacity: 1;
+    background-color: #3182ce;
+    background-color: rgba(49, 130, 206, var(--bg-opacity));
+    border-radius: 0.25rem;
+    font-size: 1.125rem;
+    --text-opacity: 1;
+    color: #fff;
+    color: rgba(255, 255, 255, var(--text-opacity));
+    transition-duration: 300ms;
+}
+
+.team-name {
+    --text-opacity: 1;
+    color: #2d3748;
+    color: rgba(45, 55, 72, var(--text-opacity));
+    font-weight: 700;
+    text-transform: uppercase;
+    font-size: 1.125rem;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+}
+
+#about {
+    clip-path: polygon(0 0, 100% 0, 100% 95%, 0% 100%);
+}
+
+#team {
+    clip-path: polygon(0 5%, 100% 0, 100% 100%, 0% 100%);
 }
