--- a/views/layouts/partials/scripts.ejs
+++ b/views/layouts/partials/scripts.ejs
@@ -18,7 +18,7 @@
     $(".owl-carousel").owlCarousel({
         loop: false,
         margin: 10,
-        nav: true,
+        nav: false,
         autoplay: false,
         navText : ["<i class='fa fa-chevron-left'></i>","<i class='fa fa-chevron-right'></i>"],
         responsive: {
