--- a/views/sections/2-hero.ejs
+++ b/views/sections/2-hero.ejs
@@ -3,19 +3,19 @@
 
     <div class="flex flex-col">
         <div class="text-center">
-            <p class="md:text-2xl text-md dark:text-black text-white font-semibold">Innovate | Work Hard | Grow</p>
+            <p class="md:text-2xl text-md text-white font-semibold">Innovate | Work Hard | Grow</p>
             <h1 amp-fx="parallax" data-parallax-factor="1.7"
-                class="text-3xl md:text-6xl lg:text-7xl dark:text-black text-white font-bold">Entrepreneurship
+                class="text-3xl md:text-6xl lg:text-7xl text-white font-bold">Entrepreneurship
                 <br>Cell
             </h1>
-            <p class="md:text-2xl text-md dark:text-black text-white font-semibold mt-5">Guru Nanak Dev, Engineering
+            <p class="md:text-2xl text-md text-white font-semibold mt-5">Guru Nanak Dev, Engineering
                 College</p>
-            <span class="md:text-xl text-sm dark:text-black text-white">Ludhiana</span>
+            <span class="md:text-xl text-sm text-white">Ludhiana</span>
         </div>
         <div class="text-center my-5">
             <div class="inline-block mr-2 mt-2">
                 <a type="button" href="#about"
-                    class="focus:outline-none text-white font-semibold  text-md uppercase py-2.5 px-5 rounded-md bg-indigo-800 hover:bg-gray-900 dark:hover:bg-gray-900 dark:hover:text-white duration-200 dark:bg-gray-100 dark:text-black">Explore</a>
+                    class="focus:outline-none text-white font-semibold  text-md uppercase py-2.5 px-5 rounded-md bg-indigo-800 hover:bg-indigo-900 dark:hover:bg-indigo-600 dark:hover:text-white duration-200 dark:bg-gray-100 dark:text-black">Explore</a>
             </div>
         </div>
     </div>
